--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Version: 0.0.0.9000
 Authors@R: 
     person(
     given = "Barbora", 
-    family = "Nemcova", "barbora.nemcova@kit.edu",
+    family = "Nemcova", 
+    email = "barbora.nemcova@kit.edu",
     role = c("aut", "cre"))
 Description: This is an experimental package containing observation models for 
   an upcoming paper about overdispersion in infectious disease nowcasting.
@@ -14,3 +15,9 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports:
+  cmdstanr
+Suggests:
+  dplyr,
+  testthat (>= 3.1.9)
+SystemRequirements: CmdStan (>=2.29)
